--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
         <title>Hello React!</title>
     </head>
     <body>
-        <div id="example"></div>
+			<div id="title"></div>
+			<div id="example"></div>
 
-        <!-- Dependencies -->
-        <script src="./node_modules/react/umd/react.development.js"></script>
-        <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+			<!-- Dependencies -->
+			<script src="./node_modules/react/umd/react.development.js"></script>
+			<script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
 
-        <!-- Main -->
-        <script src="./dist/bundle.js"></script>
+			<!-- Main -->
+			<script src="./dist/bundle.js"></script>
     </body>
 </html>
